deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice-client
  labels:
    app.openshift.io/runtime: quarkus
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"adservice"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice-client
  strategy: {}
  template:
    metadata:
      labels:
        app: adservice-client
    spec:
      containers:
      - image: quay.io/mostmark/adservice-client:latest
        name: adservice
        resources: {}
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /q/health/started
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: adservice-client
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: adservice-client
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adservice-client
spec:
  to:
    kind: Service
    name: adservice-client
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
